--- a/net-snmp/man/netsnmp_agent.3
+++ b/net-snmp/man/netsnmp_agent.3
@@ -1,4 +1,4 @@
-.TH "The Net-SNMP agent" 3 "Fri May 6 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
+.TH "The Net-SNMP agent" 3 "1 Jun 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -14,7 +14,7 @@ The snmp agent responds to SNMP queries from management stations.
 .br
 .PP
 
-.RI "\fIThe basic theory goes something like this: In the past, with the original mib module api (which derived from the original CMU SNMP code) the underlying mib modules were passed very little information (only the truly most basic information about a request). \fP"
+.RI "\fIThe basic theory goes something like this: In the past, with the original mib \fBmodule\fP api (which derived from the original CMU SNMP code) the underlying mib modules were passed very little information (only the truly most basic information about a request). \fP"
 .ti -1c
 .RI "\fBMaintain a registry of MIB subtrees, together with related information regarding mibmodule, sessions, etc\fP"
 .br
