--- a/net-snmp/man/netsnmp_netsnmp_handler_registration_s.3
+++ b/net-snmp/man/netsnmp_netsnmp_handler_registration_s.3
@@ -1,4 +1,4 @@
-.TH "netsnmp_handler_registration_s" 3 "Fri May 6 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
+.TH "netsnmp_handler_registration_s" 3 "1 Jun 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
