--- a/net-snmp/man/netsnmp_util.3
+++ b/net-snmp/man/netsnmp_util.3
@@ -1,4 +1,4 @@
-.TH "Memory Utility Routines" 3 "Fri May 6 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
+.TH "Memory Utility Routines" 3 "1 Jun 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -7,7 +7,7 @@ Memory Utility Routines \-
 
 .in +1c
 .ti -1c
-.RI "#define \fBSNMP_MAXPATH\fP   1024"
+.RI "#define \fBSNMP_MAXPATH\fP   PATH_MAX"
 .br
 .ti -1c
 .RI "#define \fBSNMP_MAXBUF\fP   (1024 * 4)"
@@ -88,12 +88,6 @@ Memory Utility Routines \-
 .RI "\fIExpands to string with value of the s. \fP"
 .ti -1c
 .RI "#define \fBSNMP_MACRO_VAL_TO_STR_PRIV\fP(s)   #s"
-.br
-.ti -1c
-.RI "#define \fBFALSE\fP   0"
-.br
-.ti -1c
-.RI "#define \fBTRUE\fP   1"
 .br
 .ti -1c
 .RI "#define \fBQUITFUN\fP(e, l)"
@@ -197,7 +191,7 @@ Memory Utility Routines \-
 .ti -1c
 .RI "u_long \fBuatime_hdiff\fP (marker_t first, marker_t second)"
 .br
-.RI "\fIReturns the difference (in u_long 1/100th secs) between the two markers (functionally this is what sysUpTime needs) \fP"
+.RI "\fIReturns the difference (in u_long 1/100th secs) between the two markers (functionally this is what sysUpTime needs). \fP"
 .ti -1c
 .RI "int \fBatime_ready\fP (marker_t pm, int deltaT)"
 .br
@@ -216,7 +210,7 @@ Memory Utility Routines \-
 .ti -1c
 .RI "char * \fBnetsnmp_getenv\fP (const char *name)"
 .br
-.RI "\fINon Windows: Returns a pointer to the desired environment variable or NULL if the environment variable does not exist. \fP"
+.RI "\fINon Windows: Returns a pointer to the desired environment \fBvariable\fP or NULL if the environment \fBvariable\fP does not exist. \fP"
 .ti -1c
 .RI "int \fBnetsnmp_addrstr_hton\fP (char *ptr, size_t len)"
 .br
@@ -226,7 +220,7 @@ Memory Utility Routines \-
 .SS "#define DIFFTIMEVAL(now, then, diff)"\fBValue:\fP
 .PP
 .nf
-{                                                        \
+{                                                       \
         now.tv_sec--;                                   \
         now.tv_usec += 1000000L;                        \
         diff.tv_sec  = now.tv_sec  - then.tv_sec;       \
@@ -264,7 +258,7 @@ Frees a pointer only if it is !NULL and sets its value to NULL.
 Definition at line 53 of file tools.h.
 .SS "#define SNMP_MACRO_VAL_TO_STR(s)   SNMP_MACRO_VAL_TO_STR_PRIV(s)"
 .PP
-Expands to string with value of the s. If s is macro, the resulting string is value of the macro. Example: #define TEST 1234 \fBSNMP_MACRO_VAL_TO_STR(TEST)\fP expands to '1234' SNMP_MACRO_VAL_TO_STR(TEST+1) expands to '1234+1' 
+Expands to string with value of the s. If s is macro, the resulting string is value of the macro. Example: define TEST 1234 \fBSNMP_MACRO_VAL_TO_STR(TEST)\fP expands to '1234' SNMP_MACRO_VAL_TO_STR(TEST+1) expands to '1234+1' 
 .PP
 Definition at line 99 of file tools.h.
 .SS "#define SNMP_MALLOC_STRUCT(s)   (struct s *) calloc(1, sizeof(struct s))"
@@ -299,7 +293,7 @@ Zeros l bytes of memory starting at s.
 Definition at line 72 of file tools.h.
 .SH "Function Documentation"
 .PP 
-.SS "long atime_diff (marker_tfirst, marker_tsecond)"
+.SS "long atime_diff (marker_t first, marker_t second)"
 .PP
 Returns the difference (in msec) between the two markers. 
 .PP
@@ -309,17 +303,17 @@ Definition at line 798 of file tools.c.
 create a new time marker. NOTE: Caller must free time marker when no longer needed. 
 .PP
 Definition at line 774 of file tools.c.
-.SS "int atime_ready (marker_tpm, intdeltaT)"
+.SS "int atime_ready (marker_t pm, int deltaT)"
 .PP
 Test: Has (marked time plus delta) exceeded current time (in msec) ? Returns 0 if test fails or cannot be tested (no marker). 
 .PP
 Definition at line 853 of file tools.c.
-.SS "void atime_setMarker (marker_tpm)"
+.SS "void atime_setMarker (marker_t pm)"
 .PP
 set a time marker. 
 .PP
 Definition at line 785 of file tools.c.
-.SS "u_int binary_to_hex (const u_char *input, size_tlen, char **output)"
+.SS "u_int binary_to_hex (const u_char * input, size_t len, char ** output)"
 .PP
 converts binary to hexidecimal \fBParameters:\fP
 .RS 4
@@ -338,7 +332,7 @@ olen Length of output string not including NULL terminator.
 FIX Is there already one of these in the UCD SNMP codebase? The old one should be used, or this one should be moved to \fBsnmplib/snmp_api.c\fP. 
 .PP
 Definition at line 290 of file tools.c.
-.SS "void free_zero (void *buf, size_tsize)"
+.SS "void free_zero (void * buf, size_t size)"
 .PP
 zeros memory before freeing it. \fBParameters:\fP
 .RS 4
@@ -350,7 +344,7 @@ zeros memory before freeing it. \fBParameters:\fP
 
 .PP
 Definition at line 188 of file tools.c.
-.SS "int hex_to_binary2 (const u_char *input, size_tlen, char **output)"
+.SS "int hex_to_binary2 (const u_char * input, size_t len, char ** output)"
 .PP
 hex_to_binary2 \fBParameters:\fP
 .RS 4
@@ -371,7 +365,7 @@ Input of an odd length is right aligned.
 FIX Another version of 'hex-to-binary' which takes odd length input strings. It also allocates the memory to hold the binary data. Should be integrated with the official hex_to_binary() function. 
 .PP
 Definition at line 327 of file tools.c.
-.SS "u_char* malloc_random (size_t *size)"
+.SS "u_char* malloc_random (size_t * size)"
 .PP
 Returns pointer to allocaed & set buffer on success, size contains number of random bytes filled. buf is NULL and *size set to KMT error value upon failure.
 .PP
@@ -388,12 +382,12 @@ a malloced buffer
 
 .PP
 Definition at line 208 of file tools.c.
-.SS "int marker_tticks (marker_tpm)"
+.SS "int marker_tticks (marker_t pm)"
 .PP
 Return the number of timeTicks since the given marker. 
 .PP
 Definition at line 901 of file tools.c.
-.SS "int memdup (u_char **to, const u_char *from, size_tsize)"
+.SS "int memdup (u_char ** to, const u_char * from, size_t size)"
 .PP
 Duplicates a memory block. Copies a existing memory location from a pointer to another, newly malloced, pointer.
 .PP
@@ -414,12 +408,12 @@ SNMPERR_SUCCESS on success, SNMPERR_GENERR on failure.
 
 .PP
 Definition at line 239 of file tools.c.
-.SS "char* netsnmp_getenv (const char *name)"
+.SS "char* netsnmp_getenv (const char * name)"
 .PP
-Non Windows: Returns a pointer to the desired environment variable or NULL if the environment variable does not exist. Windows: Returns a pointer to the desired environment variable if it exists. If it does not, the variable is looked up in the registry in HKCU\\Net-SNMP or HKLM\\Net-SNMP (whichever it finds first) and stores the result in the environment variable. It then returns a pointer to environment variable. 
+Non Windows: Returns a pointer to the desired environment \fBvariable\fP or NULL if the environment \fBvariable\fP does not exist. Windows: Returns a pointer to the desired environment \fBvariable\fP if it exists. If it does not, the \fBvariable\fP is looked up in the registry in HKCU\\Net-SNMP or HKLM\\Net-SNMP (whichever it finds first) and stores the result in the environment \fBvariable\fP. It then returns a pointer to environment \fBvariable\fP. 
 .PP
 Definition at line 929 of file tools.c.
-.SS "int netsnmp_hex_to_binary (u_char **buf, size_t *buf_len, size_t *offset, intallow_realloc, const char *hex, const char *delim)"
+.SS "int netsnmp_hex_to_binary (u_char ** buf, size_t * buf_len, size_t * offset, int allow_realloc, const char * hex, const char * delim)"
 .PP
 convert an ASCII hex string (with specified delimiters) to binary \fBParameters:\fP
 .RS 4
@@ -446,12 +440,12 @@ convert an ASCII hex string (with specified delimiters) to binary \fBParameters:
 
 .PP
 Definition at line 428 of file tools.c.
-.SS "char* netsnmp_strdup_and_null (const u_char *from, size_tfrom_len)"
+.SS "char* netsnmp_strdup_and_null (const u_char * from, size_t from_len)"
 .PP
 copies a (possible) unterminated string of a given length into a new buffer and null terminates it as well (new buffer MAY be one byte longer to account for this 
 .PP
 Definition at line 258 of file tools.c.
-.SS "int snmp_hex_to_binary (u_char **buf, size_t *buf_len, size_t *offset, intallow_realloc, const char *hex)"
+.SS "int snmp_hex_to_binary (u_char ** buf, size_t * buf_len, size_t * offset, int allow_realloc, const char * hex)"
 .PP
 convert an ASCII hex string to binary \fBNote:\fP
 .RS 4
@@ -470,7 +464,7 @@ See netsnmp_hex_to_binary for parameter descriptions.
 
 .PP
 Definition at line 488 of file tools.c.
-.SS "int snmp_realloc (u_char **buf, size_t *buf_len)"
+.SS "int snmp_realloc (u_char ** buf, size_t * buf_len)"
 .PP
 This function increase the size of the buffer pointed at by *buf, which is initially of size *buf_len. Contents are preserved **AT THE BOTTOM END OF THE BUFFER**. If memory can be (re-)allocated then it returns 1, else it returns 0.
 .PP
@@ -489,17 +483,17 @@ The current re-allocation algorithm is to increase the buffer size by whichever 
 
 .PP
 Definition at line 124 of file tools.c.
-.SS "u_long uatime_diff (marker_tfirst, marker_tsecond)"
+.SS "u_long uatime_diff (marker_t first, marker_t second)"
 .PP
 Returns the difference (in u_long msec) between the two markers. 
 .PP
 Definition at line 815 of file tools.c.
-.SS "u_long uatime_hdiff (marker_tfirst, marker_tsecond)"
+.SS "u_long uatime_hdiff (marker_t first, marker_t second)"
 .PP
-Returns the difference (in u_long 1/100th secs) between the two markers (functionally this is what sysUpTime needs) 
+Returns the difference (in u_long 1/100th secs) between the two markers (functionally this is what sysUpTime needs). 
 .PP
 Definition at line 833 of file tools.c.
-.SS "int uatime_ready (marker_tpm, unsigned intdeltaT)"
+.SS "int uatime_ready (marker_t pm, unsigned int deltaT)"
 .PP
 Test: Has (marked time plus delta) exceeded current time (in msec) ? Returns 0 if test fails or cannot be tested (no marker). 
 .PP
