--- a/net-snmp/man/netsnmp_variable_list.3
+++ b/net-snmp/man/netsnmp_variable_list.3
@@ -1,10 +1,10 @@
-.TH "variable_list" 3 "Fri May 6 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
+.TH "variable_list" 3 "1 Jun 2011" "Version 5.4.3.pre1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
 variable_list \- 
 .PP
-The netsnmp variable list binding structure, it's typedef'd to netsnmp_variable_list.  
+The netsnmp \fBvariable\fP list binding structure, it's typedef'd to netsnmp_variable_list.  
 
 .SH SYNOPSIS
 .br
@@ -17,11 +17,11 @@ The netsnmp variable list binding structure, it's typedef'd to netsnmp_variable_
 .ti -1c
 .RI "struct \fBvariable_list\fP * \fBnext_variable\fP"
 .br
-.RI "\fINULL for last variable. \fP"
+.RI "\fINULL for last \fBvariable\fP. \fP"
 .ti -1c
 .RI "oid * \fBname\fP"
 .br
-.RI "\fIObject identifier of variable. \fP"
+.RI "\fIObject identifier of \fBvariable\fP. \fP"
 .ti -1c
 .RI "size_t \fBname_length\fP"
 .br
@@ -29,11 +29,11 @@ The netsnmp variable list binding structure, it's typedef'd to netsnmp_variable_
 .ti -1c
 .RI "u_char \fBtype\fP"
 .br
-.RI "\fIASN type of variable. \fP"
+.RI "\fIASN type of \fBvariable\fP. \fP"
 .ti -1c
 .RI "\fBnetsnmp_vardata\fP \fBval\fP"
 .br
-.RI "\fIvalue of variable \fP"
+.RI "\fIvalue of \fBvariable\fP \fP"
 .ti -1c
 .RI "size_t \fBval_len\fP"
 .br
@@ -60,74 +60,72 @@ The netsnmp variable list binding structure, it's typedef'd to netsnmp_variable_
 .in -1c
 .SH "Detailed Description"
 .PP 
-The netsnmp variable list binding structure, it's typedef'd to netsnmp_variable_list. 
+The netsnmp \fBvariable\fP list binding structure, it's typedef'd to netsnmp_variable_list. 
 .PP
 \fBExamples: \fP
 .in +1c
 .PP
 \fBnotification.c\fP.
 .PP
-Definition at line 522 of file snmp_api.h.
+Definition at line 529 of file snmp_api.h.
 .SH "Field Documentation"
 .PP 
 .SS "u_char \fBvariable_list::buf\fP[40]"
 .PP
 90 percentile < 40. 
 .PP
-Definition at line 538 of file snmp_api.h.
+Definition at line 545 of file snmp_api.h.
 .SS "void* \fBvariable_list::data\fP"
 .PP
 (Opaque) hook for additional data 
 .PP
-Definition at line 540 of file snmp_api.h.
+Definition at line 547 of file snmp_api.h.
 .SS "void(* \fBvariable_list::dataFreeHook\fP)(void *)"
 .PP
 callback to free above 
-.PP
-Definition at line 542 of file snmp_api.h.
 .SS "oid* \fBvariable_list::name\fP"
 .PP
-Object identifier of variable. 
+Object identifier of \fBvariable\fP. 
 .PP
-Definition at line 526 of file snmp_api.h.
+Definition at line 533 of file snmp_api.h.
 .SS "size_t \fBvariable_list::name_length\fP"
 .PP
 number of subid's in name 
 .PP
-Definition at line 528 of file snmp_api.h.
+Definition at line 535 of file snmp_api.h.
 .SS "oid \fBvariable_list::name_loc\fP[MAX_OID_LEN]"
 .PP
 buffer to hold the OID 
 .PP
-Definition at line 536 of file snmp_api.h.
-.SS "struct \fBvariable_list\fP* \fBvariable_list::next_variable\fP"
+Definition at line 543 of file snmp_api.h.
+.SS "struct \fBvariable_list\fP* \fBvariable_list::next_variable\fP\fC [read]\fP"
 .PP
-NULL for last variable. 
+NULL for last \fBvariable\fP. 
 .PP
-Definition at line 524 of file snmp_api.h.
+Definition at line 531 of file snmp_api.h.
 .SS "u_char \fBvariable_list::type\fP"
 .PP
-ASN type of variable. 
+ASN type of \fBvariable\fP. 
 .PP
 \fBExamples: \fP
 .in +1c
 \fBdelayed_instance.c\fP.
 .PP
-Definition at line 530 of file snmp_api.h.
+Definition at line 537 of file snmp_api.h.
 .SS "\fBnetsnmp_vardata\fP \fBvariable_list::val\fP"
 .PP
-value of variable 
+value of \fBvariable\fP 
 .PP
 \fBExamples: \fP
 .in +1c
 \fBdelayed_instance.c\fP.
 .PP
-Definition at line 532 of file snmp_api.h.
+Definition at line 539 of file snmp_api.h.
 .SS "size_t \fBvariable_list::val_len\fP"
 .PP
 the length of the value to be copied into buf 
 .PP
-Definition at line 534 of file snmp_api.h.
+Definition at line 541 of file snmp_api.h.
 
 .SH "Author"
 .PP 
